--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@ $(document).ready(function(){
 					<svg width="40" height="40" xmlns="http://www.w3.org/2000/svg">
 					 <!-- Created with SVG-edit - http://svg-edit.googlecode.com/ -->
 					 <g>
-					  <title>Previous page (S-Left)</title>
+					  <title>Previous bookmark (S-Left)</title>
 					  <path transform="rotate(-180 18.9697 20.1122)" id="svg_13" stroke="#ffffff" d="m20.467497,20.112247l-8.773763,-14.254913l5.778195,0l8.773788,14.254913l-8.773788,14.25491l-5.778195,0l8.773763,-14.25491z" fill-opacity="0" stroke-linecap="null" stroke-linejoin="null" stroke-dasharray="null" fill="#afafaf"/>
 					 </g>
 					</svg>
@@ -158,7 +158,7 @@ $(document).ready(function(){
 					<svg width="40" height="40" xmlns="http://www.w3.org/2000/svg">
 					 <!-- Created with SVG-edit - http://svg-edit.googlecode.com/ -->
 					 <g>
-					  <title>Bookmark this page (B)</title>
+					  <title>Toggle bookmark (B)</title>
 					  <rect stroke="#ffffff" id="svg_1" height="28.604868" width="24.052915" y="5.858955" x="8.807377" fill-opacity="0" stroke-linecap="null" stroke-linejoin="null" stroke-dasharray="null" fill="#afafaf"/>
 					  <path stroke="#ffffff" id="svg_4" d="m21.762226,3.651895l8.416584,0l0,14.510554l-4.124887,-2.792193l-4.291697,2.792193l0,-14.510554l0,0z" stroke-linecap="null" stroke-linejoin="null" stroke-dasharray="null" stroke-width="0" fill="#ff0000"/>
 					 </g>
@@ -170,7 +170,7 @@ $(document).ready(function(){
 					<svg width="40" height="40" xmlns="http://www.w3.org/2000/svg">
 					 <!-- Created with SVG-edit - http://svg-edit.googlecode.com/ -->
 					 <g>
-					  <title>Next page (S-Right)</title>
+					  <title>Next bookmark (S-Right)</title>
 					  <path stroke="#ffffff" id="svg_11" d="m23.175751,20.132858l-8.773797,-14.254913l5.77823,0l8.773788,14.254913l-8.773788,14.254913l-5.77823,0l8.773797,-14.254913z" fill-opacity="0" stroke-linecap="null" stroke-linejoin="null" stroke-dasharray="null" fill="#afafaf"/>
 					 </g>
 					</svg>
@@ -181,13 +181,13 @@ $(document).ready(function(){
 	<div class="bottom-toolbar">
 		<!-- this is just an example-->
 		<div class="controls">
-			<a href="#home">Cover</a>
-			<a href="#prevBookmark">&lt; Bookmark</a>
-			<a href="#prevArticle">&lt; Article</a>
-			<a href="#prev" alt="Previous page (Left)">&lt; Pa</a><a href="#next" alt="Next page (Right)">ge &gt;</a>
-			<a href="#nextArticle">Article &gt;</a>
-			<a href="#nextBookmark">Bookmark &gt;</a>
-			<a href="#end">End</a>
+			<a href="#home" title="(Home)">Cover</a>
+			<a href="#prevBookmark" title="(S-Left)">&lt; Bookmark</a>
+			<a href="#prevArticle" title="(C-Left)">&lt; Article</a>
+			<a href="#prev" title="Previous page (Left)">&lt; Pa</a><a href="#next" title="Next page (Right)">ge &gt;</a>
+			<a href="#nextArticle" title="(C-Right)">Article &gt;</a>
+			<a href="#nextBookmark" title="(S-Right)">Bookmark &gt;</a>
+			<a href="#end" title="(End)">End</a>
 		</div>
 		<!-- position indicator -->
 		<div class="navigator">
