fixed initial position load...
Signed-off-by: Alex A. Naanou <alex.nanou@gmail.com>

--- a/index.html
+++ b/index.html
@@ -115,6 +115,7 @@ $(document).ready(function(){
 	// hide the splash screen...
 	$(window).one('webkitTransitionEnd oTransitionEnd msTransitionEnd transitionend',
 		function(){
+			setCurrentPage()
 			$('.splash').fadeOut()
 		})
 })
