--- a/index.html
+++ b/index.html
@@ -115,8 +115,7 @@ $(document).ready(function(){
 	// hide the splash screen...
 	$(window).one('webkitTransitionEnd oTransitionEnd msTransitionEnd transitionend',
 		function(){
-			setCurrentPage()
-			$('.splash').fadeOut()
+			setTimeout($('.splash').fadeOut(), 100)
 		})
 })
 
