added main feature description to demo...
Signed-off-by: Alex A. Naanou <alex.nanou@gmail.com>

--- a/index.html
+++ b/index.html
@@ -232,6 +232,25 @@ $(document).ready(function(){
 			<div class="cover page">
 				<div class="content">
 					<h1 name="basics" style="color:gray;font-size:100px;">The Basics...</h1>
+					<big>
+						<h2>Main features</h2>
+						<ul>
+							<li>Magazines, Covers, Articles and Pages, fully navigable
+							<li>Three main views: <i>Magazine (under development)</i> Page and Ribbon
+							<li>Fully linkable structure
+							<li>Full Gesture, Mouse or Keyboard navigation
+							<li>Special #URLs enable full navigation and control
+							<li>Bookmarks and bookmark navigation
+							<li>Intuitive navigator widget
+							<li>Portable to most (all?) mobile platforms (via PhoneGap)
+							<li>Standalone (via CEF)
+							<i>
+							<li>Usable from the web (support for engines other than WebKit not here yet)
+							<li>Integrated Editor (under development)
+							<li>Integrated publishing framework (under development)
+							</i>
+						</ul>
+					</big>
 					<div style="position:absolute; width:100%; bottom:10px; text-align: right;">
 						<a href="#next">get started...</a><br>
 					</div>
