--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@ $(document).ready(function(){
 						<h2>Main features</h2>
 						<ul>
 							<li>Magazines, Covers, Articles and Pages, fully navigable
-							<li>Three main views: <i>Magazine (under development)</i> Page and Ribbon
+							<li>Three main views: <i style="color:silver">Magazine (under development)</i> Page and Ribbon
 							<li>Fully linkable structure
 							<li>Full Gesture, Mouse or Keyboard navigation
 							<li>Special #URLs enable full navigation and control
@@ -244,7 +244,7 @@ $(document).ready(function(){
 							<li>Intuitive navigator widget
 							<li>Portable to most (all?) mobile platforms (via PhoneGap)
 							<li>Standalone (via CEF)
-							<i>
+							<i style="color: silver">
 							<li>Usable from the web (support for engines other than WebKit not here yet)
 							<li>Integrated Editor (under development)
 							<li>Integrated publishing framework (under development)
