added bookmark active zone in upper-right corner of page...
Signed-off-by: Alex A. Naanou <alex.nanou@gmail.com>

--- a/index.html
+++ b/index.html
@@ -109,6 +109,7 @@ $(document).ready(function(){
 	// load state and setup everything that depends on it...
 	loadState()
 	setupNavigator()
+	setupBookmarkTouchZones()
 
 	// set default view...
 	togglePageView('on')
