--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@ $(document).ready(function(){
 	// hide the splash screen...
 	$(window).one('webkitTransitionEnd oTransitionEnd msTransitionEnd transitionend',
 		function(){
-			setTimeout($('.splash').fadeOut(), 100)
+			setTimeout(function(){$('.splash').fadeOut()}, 50)
 		})
 })
 
