--- a/index.html
+++ b/index.html
@@ -251,12 +251,13 @@ $(document).ready(function(){
 							<li>Magazines, Covers, Articles and Pages, fully navigable
 							<li>Three main views: <i style="color:silver">Magazine (under development)</i> Page and Ribbon
 							<li>Fully linkable structure
-							<li>Full Gesture, Mouse or Keyboard navigation
-							<li>Special #URLs enable full navigation and control
+							<li>Full intuitive Gesture, Mouse or Keyboard navigation
+							<li>Special #URLs enable full link-based navigation and control
 							<li>Bookmarks and bookmark navigation
 							<li>Intuitive navigator widget
-							<li>Portable to most (all?) mobile platforms (via PhoneGap)
-							<li>Standalone (via CEF)
+							<li>Portable to most mobile platforms including: Apple iOS, Android, Windows Phone 7/8, BlackBery, HP webOS and more.
+							<li>Standalone on main desktop operating systems, including Apple MacOS X and Microsoft Windows
+							<li>Based on popular, open and easy to learn and use standards (HTML5 layout, SVG vector graphics)
 							<i style="color: silver">
 							<li>Usable from the web (support for engines other than WebKit not here yet)
 							<li>Integrated Editor (under development)
