--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@ $(document).ready(function(){
 						<path id="svg_12" transform="rotate(180 415.667 178.667)" d="m78.166656,117.166718l675.000031,0l0,123.000031l-675.000031,0" fill-opacity="0" fill="#000000" stroke="#000000"/>
 						<rect id="svg_13" stroke="#000000" height="100" width="130" y="132" x="87" stroke-linecap="null" stroke-linejoin="null" stroke-dasharray="null" stroke-width="2" fill="#ffffff"/>
 						<rect id="svg_14" height="100" width="415.00001" y="132" x="223" fill-opacity="0" stroke-linecap="null" stroke-linejoin="null" stroke-dasharray="null" fill="#000000" stroke="#000000"/>
-						<text xml:space="preserve" text-anchor="middle" font-family="Sans-serif" font-size="14" id="svg_24" y="187.5" x="152" stroke-linecap="null" stroke-linejoin="null" stroke-dasharray="null" stroke-width="0" stroke="#000000" fill="#000000" stroke-opacity="0">Magazine cover</text>
+						<text xml:space="preserve" text-anchor="middle" font-family="Sans-serif" font-size="14" id="svg_24" y="187.5" x="152" stroke-linecap="null" stroke-linejoin="null" stroke-dasharray="null" stroke-width="0" stroke="#000000" fill="#000000" stroke-opacity="0">Magazine Cover</text>
 						<rect height="86" width="130" y="138.66667" x="229.66666" stroke-linecap="null" stroke-linejoin="null" stroke-dasharray="null" stroke-width="2" fill="#ffffff" id="svg_7" stroke="#000000"/>
 						<text fill="#000000" stroke="#000000" stroke-width="0" x="294.83334" y="187" id="svg_4" font-size="14" font-family="Sans-serif" text-anchor="middle" xml:space="preserve" stroke-opacity="0">Article Cover</text>
 						<rect height="86" width="130" y="138.66668" x="365.66667" stroke-linecap="null" stroke-linejoin="null" stroke-dasharray="null" stroke-width="2" fill="#e5e5e5" stroke="#000000" id="svg_15"/>
