--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <script src="jquery.js"></script>
 <script src="jquery.touchSwipe.js"></script>
 <script src="jstorage.js"></script>
+<script src="ckeditor/ckeditor.js"></script>
 
 <script src="jli.js"></script>
 <script src="magazine.js"></script>
@@ -98,7 +99,7 @@ $(document).ready(function(){
 				return true
 			},
 
-			//excludedElements: '.noSwipe',
+			excludedElements: '.noSwipe, a, [contenteditable=true]',
 			fingers: $.fn.swipe.fingers.ALL
 			//fingers: $.fn.swipe.fingers.THREE
 		})
@@ -129,7 +130,23 @@ $(document).ready(function(){
 				$('.splash').fadeOut()
 			}, 350)
 		})
+	
+
+	
 })
+
+// setup ckeditor events...
+CKEDITOR.on('instanceCreated', function(evt){
+	var editor = evt.editor
+	editor.on('focus', function(){
+		toggleEditorMode('on')
+	})
+	editor.on('blur', function(){
+		toggleEditorMode('off')
+	})
+})
+
+
 
 
 </script>
@@ -443,7 +460,13 @@ $(document).ready(function(){
 
 			<div class="page">
 				<div class="content">
-					Page
+					<h1 contenteditable="true">Two column</h1>
+					<div contenteditable="true" style="float:left; width: 45%; height: 100%; margin: 10px;">
+						Column 1
+					</div>
+					<div contenteditable="true" style="float:left; width: 45%; height: 100%; padding: 10px;">
+						Column 2
+					</div>
 				</div>
 			</div>
 			<div class="page no-resize">
