--- a/index.html
+++ b/index.html
@@ -454,11 +454,11 @@ $(document).ready(function(){
 
 			<div class="page">
 				<div class="content">
-					<h1 contenteditable="true">Two column</h1>
-					<div contenteditable="true" style="float:left; width: 45%; height: 100%; margin: 10px;">
+					<h1>Two column</h1>
+					<div style="float:left; width: 45%; height: 100%; margin: 10px;">
 						Column 1
 					</div>
-					<div contenteditable="true" style="float:left; width: 45%; height: 100%; padding: 10px;">
+					<div style="float:left; width: 45%; height: 100%; padding: 10px;">
 						Column 2
 					</div>
 				</div>
