--- a/editor.html
+++ b/editor.html
@@ -109,6 +109,15 @@ $(document).ready(function(){
 			//fingers: $.fn.swipe.fingers.THREE
 		})
 
+	// XXX this will need to be repeated to newly created elements...
+	$('[contenteditable=true]')
+		.on('focus', function(){
+			toggleEditorMode('on')
+		})
+		.on('blur', function(){
+			toggleEditorMode('off')
+		})
+
 
 	// load state and setup everything that depends on it...
 	loadState()
@@ -139,22 +148,6 @@ $(document).ready(function(){
 
 	
 })
-
-// setup ckeditor events...
-// XXX need to $('[contenteditable]').attr('contenteditable', 'false') on
-//		thumbnail view mode and true on page view mode...
-CKEDITOR.on('instanceCreated', function(evt){
-	var editor = evt.editor
-	editor.on('focus', function(){
-		toggleEditorMode('on')
-	})
-	editor.on('blur', function(){
-		toggleEditorMode('off')
-	})
-})
-
-
-
 
 </script>
 </head>
