--- a/editor.html
+++ b/editor.html
@@ -98,7 +98,7 @@ $(document).ready(function(){
 			click: function(evt, elem){
 				if($(elem).hasClass('page')){
 					setCurrentPage(elem)
-				} else if($(elem).hasClass('content')){
+				} else if($(elem).parents('.page').length != 0){
 					setCurrentPage($(elem).parents('.page').first())
 				}
 				return true
