squashed several bugs + added more separation between data and chrome...
Signed-off-by: Alex A. Naanou <alex.nanou@gmail.com>

--- a/lister.html
+++ b/lister.html
@@ -507,7 +507,7 @@ $(document).ready(function(){
 						$('#DRAG_FULL_PAGE').text(DRAG_FULL_PAGE)
 						$('#USE_REAL_PAGE_SIZES').text(USE_REAL_PAGE_SIZES)
 
-						$('#FingersSupported').text($.fn.swipe.fingers.ALL)
+						//$('#FingersSupported').text($.fn.swipe.fingers.ALL)
 						var b = $('#BrowserInfo')
 						$.each($.browser, function(i, e){$('<div>'+i+': '+e+'</div>').appendTo(b)})
 					}
